--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.3.1",
     "tailwindcss": "^1.6.2"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0"
   }
 }
