--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0"
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-react": "^7.20.6"
   }
 }
