--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "npx eslint .",
+    "format": "npx prettier **/*.js"
   },
   "dependencies": {
     "next": "9.5.1",
@@ -17,6 +19,9 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "eslint": "^7.6.0",
-    "eslint-plugin-react": "^7.20.6"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "prettier": "^2.0.5"
   }
 }
