--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "npx eslint .",
-    "format": "npx prettier **/*.js"
+    "format": "npx prettier --write **/*.js"
   },
   "dependencies": {
     "next": "9.5.1",
