--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.3.1",
+    "react-icons": "^3.10.0",
     "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
